# Lucidity

./: .gitignore  CLAUDE.md  Cargo.toml  DEV_LOG_2026-01-17.md  IMPROVEMENTS.md  LUCIDITY_MOBILE_PLAN.md  PHASE1_AUDIT.md  PHASE3_PROGRESS.md  README.md  agents.md  build_check.ps1  build_output.txt  deny.toml  verify-phase1.ps1
.agent/workflows/: generate-codex-mission.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-relay.yml  release-mobile.yml
.planning/debug/: terminal-server-testing.md
.serena/: project.yml
.serena/memories/: lucidity_protocol.md  lucidity_scope.md
config/: Cargo.toml
config/src/: config.rs  keyassignment.rs  lib.rs  pairing.rs  ssh.rs
docs/: ARCHITECTURE.md  COMPLETED.md  CONSOLIDATION_SUMMARY.md  HISTORY.md  MASTER_PLAN.md  PRIVACY_POLICY.md  ROADMAP.md  TESTING.md  TESTING_REGIME.md  feedback.md  index.md  log-edits.md  log-mistakes.md
docs/deployment/: ios-signing-windows.md  relay-setup.md
docs/legal/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
docs/lucidity/: FAQ.md  audit.md  cloud-architecture.md  index.md  pairing.md  phase1-api-map.md  phase1.md  phase2.md  phase3.md  phase4.md  protocol.md  security-model.md  security.md  test-report-2026-01-18.md  troubleshooting.md  user-guide.md
docs/marketing/: LAUNCH_ANNOUNCEMENT.md  MARKETING_PLAN.md
docs/plans/: 2026-01-16-lucidity-phase1-host-bridge.md
docs/store/: APP_STORE_LISTINGS.md
docs/support/: SUPPORT_CHANNELS.md
docs/testing/: URGENT_FIXES_NEEDED.md  VALIDATION_REPORT_2026-01-19.md  VERIFICATION_CHECKLISTS.md
lua-api-crates/termwiz-funcs/: Cargo.toml
lucidity-auth/: Cargo.toml  README.md
lucidity-auth/src/: main.rs
lucidity-client/: Cargo.toml
lucidity-client/src/: main.rs
lucidity-devices/: Cargo.toml
lucidity-devices/src/: main.rs
lucidity-host/: Cargo.toml  build_errors.txt  errors.txt
lucidity-host/src/: bridge.rs  clipboard.rs  lib.rs  p2p.rs  pairing.rs  pairing_api.rs  protocol.rs  registry.rs  relay_client.rs  server.rs
lucidity-host/tests/: integrated_relay_test.rs  pairing_test.rs  tcp_smoke.rs
lucidity-mobile/: README.md  pubspec.yaml
lucidity-mobile/.serena/: project.yml
lucidity-mobile/android/app/: build.gradle.kts
lucidity-mobile/android/app/src/main/: AndroidManifest.xml
lucidity-mobile/android/app/src/main/kotlin/com/coldshalamov/lucidity/lucidity_mobile/: MainActivity.kt
lucidity-mobile/assets/icon/: README.md
lucidity-mobile/integration_test/: e2e_test.dart
lucidity-mobile/ios/Runner/: Info.plist
lucidity-mobile/ios/Runner.xcodeproj/: project.pbxproj
lucidity-mobile/lib/: main.dart
lucidity-mobile/lib/app/: app_config.dart  app_state.dart  auth_state.dart  desktop_profile.dart  desktop_store.dart  exponential_backoff.dart
lucidity-mobile/lib/protocol/: base64url_nopad.dart  connection_manager.dart  connection_state.dart  constants.dart  error_handler.dart  frame.dart  lucidity_client.dart  messages.dart  mobile_identity.dart  pairing_url.dart  relay_client.dart
lucidity-mobile/lib/screens/: desktop_screen.dart  desktop_setup_screen.dart  device_list_screen.dart  home_screen.dart  login_screen.dart  pairing_screen.dart  qr_scan_screen.dart  root_screen.dart  splash_screen.dart
lucidity-mobile/lib/services/: connectivity_service.dart  keychain_service.dart
lucidity-mobile/linux/: CMakeLists.txt
lucidity-mobile/linux/runner/: my_application.cc
lucidity-mobile/macos/Runner.xcodeproj/: project.pbxproj
lucidity-mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lucidity-mobile/macos/Runner/Configs/: AppInfo.xcconfig
lucidity-mobile/test/: desktop_profile_test.dart  pairing_url_test.dart  protocol_test.dart  widget_test.dart
lucidity-mobile/web/: index.html  manifest.json
lucidity-mobile/windows/: CMakeLists.txt
lucidity-mobile/windows/runner/: Runner.rc  main.cpp
lucidity-pairing/: Cargo.toml
lucidity-pairing/src/: device_trust.rs  keypair.rs  keypair_store.rs  lib.rs  pairing.rs  qr.rs
lucidity-proto/: Cargo.toml
lucidity-proto/src/: frame.rs  lib.rs  protocol.rs  relay.rs
lucidity-proto/tests/: frame_roundtrip.rs  relay_roundtrip.rs
lucidity-relay/: Cargo.toml  Dockerfile  README.md
lucidity-relay-agent/: Cargo.toml  README.md
lucidity-relay-agent/src/: main.rs
lucidity-relay/src/: lib.rs  main.rs  session.rs
lucidity-relay/tests/: integration_test.rs
mux/: Cargo.toml
mux/src/: lib.rs  localpane.rs
scripts/: generate_ios_csr.sh
wezterm-gui/: Cargo.toml
wezterm-gui/src/: commands.rs  main.rs  pairing_handler.rs
wezterm-gui/src/overlay/: lucidity_pair.rs  lucidity_pair_approve.rs  mod.rs
wezterm-gui/src/termwindow/: mod.rs
