[package]
name = "lucidity-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.7"
env_logger = "0.11"
jsonwebtoken = "9.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

