[package]
name = "lucidity-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

lucidity-proto.workspace = true
lucidity-host.workspace = true
lucidity-pairing.workspace = true
base64 = "0.22"
chrono.workspace = true
