[package]
name = "lucidity-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
config.workspace = true
crossbeam.workspace = true
log.workspace = true
mux.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lucidity-pairing.workspace = true

lucidity-proto = { path = "../lucidity-proto" }

[dev-dependencies]
k9.workspace = true
tempfile.workspace = true
