[package]
name = "lucidity-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
config = { path = "../config", default-features = false }
crossbeam.workspace = true
log.workspace = true
mux = { path = "../mux", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lucidity-pairing.workspace = true

lucidity-proto = { path = "../lucidity-proto" }


[dev-dependencies]
k9.workspace = true
tempfile.workspace = true
