[package]
name = "lucidity-pairing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
base64 = "0.22"
ed25519-dalek = "2.1"
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
image = { workspace = true, default-features = false, features = ["png"] }
rusqlite.workspace = true
chrono.workspace = true

[dev-dependencies]
k9.workspace = true
tempfile.workspace = true
