[package]
name = "lucidity-pairing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
base64 = "0.22"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
qrcodegen.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { workspace = true, features = ["bundled"] }
chrono = { workspace = true, features = ["clock"] }


[dev-dependencies]
k9.workspace = true
tempfile.workspace = true
