[package]
name = "lucidity-relay-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
lucidity-proto = { path = "../lucidity-proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
url = "2"

