[package]
name = "lucidity-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
warp = "0.3" # WebSocket server
futures = "0.3"
lucidity-proto = { path = "../lucidity-proto" }
uuid = { version = "1.13", features = ["v4"] }
jsonwebtoken = "9.3"

[lib]
name = "lucidity_relay"
path = "src/lib.rs"

[[bin]]
name = "lucidity-relay"
path = "src/main.rs"

[dev-dependencies]
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }
