[package]
name = "lucidity-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lucidity-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
dashmap = "5"
anyhow = "1.0"
futures-util = "0.3"
